--- a/package.json
+++ b/package.json
@@ -4,17 +4,29 @@
   "description": "refund stripe payments",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test mocha 'tests/**/*.test.js' --require @babel/register --exit",
     "perform": "node app.js",
-    "demo": "node demo.js"
+    "demo": "node demo.js",
+    "refund": "node refund.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/register": "^7.0.0",
+    "babel-eslint": "^10.0.2",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "csvtojson": "^2.0.10",
     "fast-csv": "^4.3.0",
-    "node-fetch": "^2.6.0",
+    "mocha": "^8.2.1",
+    "node-fetch": "^2.6.1",
     "objects-to-csv": "^1.3.6",
-    "stripe": "^8.126.0"
+    "sinon": "^7.2.7",
+    "stripe": "^8.126.0",
+    "throttled-queue": "^1.0.7"
   }
 }
